tests/valid-gd-scripts/unique_node_name.gd
extends Node

func foo():
	var x = $%UniqueNodeName
