tests/invalid-gd-scripts/type_cast_w_attrcall.gd
func foo(x):
	x as Node . name . size()
